hard-gists/a8ddb994df41583b64f8/run.log
=== Docker Run Log for a8ddb994df41583b64f8 ===
Started at: Mi 29. Okt 19:08:57 CET 2025

[2025-10-29 19:08:57] START: Running container for a8ddb994df41583b64f8
[2025-10-29 19:08:58] SUCCESS: Container 0036aae81775f59e1a63c7c0fbf175121e39cd0a56d318daa63231d2487914d2 started for a8ddb994df41583b64f8
=== Container logs for a8ddb994df41583b64f8 ===
  File "/snippet.py", line 27
    print parse_ipa_info(sys.argv[1])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a8ddb994df41583b64f8 ===
[2025-10-29 19:09:00] INFO: Container 0036aae81775f59e1a63c7c0fbf175121e39cd0a56d318daa63231d2487914d2 has stopped
